# agent

./: Cargo.toml  README.md  codecov.yml  renovate.json
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature_request.md  3-question.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: agent-ci.yml  auto-set-label.yml  basic_ci_checks.yml  check-verified-commit.yml  nightly-ci.yml  oaev_auto_label.yml  oaev_check_signed_commit.yml  oaev_common_ci_checks.yml  oaev_validate_pr_title  oaev_validate_pr_title.yml  openaev-validate-pr-title.yml  pr-title-check-worker.yml  pr-title-check.yml  pr-title.yml  release.yml
.run/: Agent start.run.xml
config/: default.toml
installer/linux/: agent-installer-service-user.sh  agent-installer-session-user.sh  agent-installer.sh  agent-upgrade-service-user.sh  agent-upgrade-session-user.sh  agent-upgrade.sh
installer/macos/: agent-installer-service-user.sh  agent-installer-session-user.sh  agent-installer.sh  agent-upgrade-service-user.sh  agent-upgrade-session-user.sh  agent-upgrade.sh
installer/windows/: PSScriptAnalyzerSettings.psd1  README.md  Run-Lint.ps1  agent-installer-service-user.nsi  agent-installer-service-user.ps1  agent-installer-session-user.nsi  agent-installer-session-user.ps1  agent-installer.nsi  agent-installer.ps1  agent-upgrade-service-user.ps1  agent-upgrade-session-user.ps1  agent-upgrade.ps1  license.txt
scripts/: release.py
src/: main.rs
src/api/: manage_jobs.rs  mod.rs  register_agent.rs
(+12 files in other folders)
